@@ -9,9 +9,6 @@
 			<trans-unit id="tt_content.tx_ratings.template_file" xml:space="preserve">
 				<source>Template file to use:</source>
 			</trans-unit>
-			<trans-unit id="no_ts_template" xml:space="preserve">
-				<source>Error: TS template from ratings extension is not included to site TS template</source>
-			</trans-unit>
 		</body>
 	</file>
 </xliff>
