@@ -30,14 +30,14 @@ class tx_ratings {
         $pibaseObj = GeneralUtility::makeInstance(\Netcreators\Ratings\Controller\RegisterPluginController::class);
         $pibaseObj->cObj = $this->cObj;
         $content = $pibaseObj->main($content, $conf);
-        $content = 'TEST Ratings';
+
         return $content;
     }
 }
 
 
-if (defined('TYPO3_MODE') && $GLOBALS['TYPO3_CONF_VARS'][TYPO3_MODE]['XCLASS']['ext/ratings/pi/class.tx_ratings.php'])	{
+if (defined('TYPO3_MODE') && $GLOBALS['TYPO3_CONF_VARS'][TYPO3_MODE]['XCLASS']['ext/ratings/class.tx_ratings.php'])	{
     /** @noinspection PhpIncludeInspection */
-    include_once($GLOBALS['TYPO3_CONF_VARS'][TYPO3_MODE]['XCLASS']['ext/ratings/pi/class.tx_ratings.php']);
+    include_once($GLOBALS['TYPO3_CONF_VARS'][TYPO3_MODE]['XCLASS']['ext/ratings/class.tx_ratings.php']);
 }
 
